# incent

./: .gitignore  README.md  __init__.py  pyproject.toml  smart_align.py  test_algo.py  test_dbscan.py  test_grow.py  test_grow2.py  test_macro.py  test_marginal.py  test_mut.py  test_mutual.py  test_p.py  test_procrustes.py  test_select.py
.github/workflows/: ci.yml
benchmarks/: README.md  __init__.py  data.py  methods.py  metrics.py  run_dlpfc.py
benchmarks/results/: dlpfc.csv
incent/: __init__.py  core.py  metrics.py  utils.py  visualize.py
notebooks/: 01_quickstart_synthetic.ipynb  01_quickstart_synthetic.py  02_dlpfc.ipynb  02_dlpfc.py
scripts/: _make_readme_figure.py
src/: __init__.py  clustering.py  core.py  hierarchical.py  metrices.py  utils.py  visualize.py
tests/: conftest.py  test_backend.py  test_benchmarks_harness.py  test_costs.py  test_hierarchical_macro_section.py  test_pairwise_align.py
