[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incent"
version = "0.1.0"
description = "Integrating Cell Type and Neighborhood Information for Enhanced Alignment of Single-Cell Spatial Transcriptomics Data"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Afzal Hossan" },
]
keywords = [
    "spatial-transcriptomics",
    "single-cell",
    "optimal-transport",
    "fused-gromov-wasserstein",
    "alignment",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24,<3",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "anndata>=0.10",
    "POT>=0.9.4",
    "torch>=2.1",
    "tqdm>=4.65",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
]
docs = [
    "sphinx>=7",
    "myst-parser>=2",
    "furo>=2024.1",
]

[project.urls]
Homepage = "https://github.com/AfzalHossan-2005021/INCENT"
Issues = "https://github.com/AfzalHossan-2005021/INCENT/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["incent*"]
exclude = ["tests*", "benchmarks*", "notebooks*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:anndata.*",
    "ignore::DeprecationWarning:scipy.*",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # line length handled by formatter
    "E701",  # one-line if-statements are common in this code
    "E731",  # the codebase uses module-level lambdas as small helpers
    "E741",  # POT uses ambiguous l/I/O variable names
    "B007",  # research-style enumerate loops sometimes drop the index
    "B008",  # default arg call (numpy dtype objects)
    "B905",  # strict= on zip() not enforced (tracked separately)
    "W291",  # trailing whitespace tolerated until a one-shot reformat lands
    "W293",  # blank-line whitespace tolerated until a one-shot reformat lands
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]
